--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,81 @@
+/* Top Navbar */
+.top-navbar{
+  background-color: #F2F2F2;
+}
+.top-navbar .container{
+  padding: 0 2px;
+}
+.top-navbar button i{
+  color: black;
+}
+
+/* Search */
+.header-search form{
+  max-width: 300px;
+}
+
+.cart-toggle{
+  color: rgb(203 104 59);
+}
+
+.header-bottom{
+background-color: #F2F2F2;
+}
+
+.banner-group .banner .banner-content a{
+  background-color: #2b6777;
+  color: white;
+}
+
+.header-right .wishlist{
+  color:#2b6777;
+}
+
+.product-wrapper .product-grid .shop-now{
+  background-color: #2b6777;
+  color: white;
+}
+
+/* Header */
+.header-middle{
+  background-color: #c8d8e4;
+}
+
+.footer{
+  background-color: #c8d8e4;
+}
+.footer .widget-contact-info ul label{
+  color: #222;
+}
+.footer .widget-contact-info ul li a{
+  color: #666;
+}
+.footer .footer-middle .widget-info h4.widget-title{
+  color: #222;
+}
+.footer .footer-middle .widget-info .widget-body li a{
+  color: #47494b;
+}
+.footer .footer-middle .widget-service h4.widget-title{
+  color: #222;
+}
+.footer .footer-middle .widget-service .widget-body li a{
+  color: #47494b;
+}
+
+.footer .footer-bottom .footer-right .social-links a{
+  color: #222;
+  border-color: #222;
+}
+.footer .footer-bottom .footer-center p{
+  color: #222;
+}
+
+.scroll-top{
+  color: rgb(228 113 83);
+}
+
+/* Banner */
 .custom-banner img{
  width: 100%; 
  height: 500px;
