--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,7 @@
+body{
+  background-color: rgb(255 255 255);
+}
+
 /* Top Navbar */
 .top-navbar{
   background-color: #F2F2F2;
@@ -21,14 +25,33 @@
 .header-bottom{
 background-color: #F2F2F2;
 }
+.header-bottom .main-nav .menu .hot-deal{
+  color:#3792a7
+}
 
 .banner-group .banner .banner-content a{
   background-color: #2b6777;
   color: white;
 }
 
+.header-left .header-search .input-wrapper input{
+  border-radius: 25px;
+  border: 3px solid #f26b3c;
+}
+.header-left .header-search .input-wrapper .btn-search{
+  background-color: #2b6777;
+  color: white;
+  border: 3px solid #f26b3c;
+  border-left: none;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+}
+
 .header-right .wishlist{
   color:#2b6777;
+}
+.header-right .login{
+  color:#383e8b;
 }
 
 .product-wrapper .product-grid .shop-now{
