--- a/css/custom.css
+++ b/css/custom.css
@@ -47,6 +47,23 @@ background-color: #F2F2F2;
   border-bottom-right-radius: 25px;
 }
 
+.mobile-menu-wrapper .mobile-menu-container .input-wrapper input{
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  border: 3px solid #f26b3c;
+  border-right: none;
+}
+
+.mobile-menu-wrapper .mobile-menu-container .input-wrapper .btn-search{
+  background-color: #2b6777;
+  color: white;
+  border: 3px solid #f26b3c;
+  border-left: none;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
+}
+
+
 .header-right .wishlist{
   color:#2b6777;
 }
